# OculusRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMakeModules/: FindOpenCL.cmake
OculusSDK/: CMakeLists.txt
OculusSDK/LibOVR/: CMakeLists.txt
OculusSDK/LibOVR/Src/: OVR_CAPIShim.c  OVR_CAPI_Util.cpp  OVR_StereoProjection.cpp
Renderer/: CMakeLists.txt
Renderer/Include/: CompressImages.h  Model.h  ModelData.h  OVRDepthBuffer.h  OVRTextureBuffer.h  ObjLoader.h  OculusSystem.h  Scene.h  ShaderUtils.h  TextureLoader.h
Renderer/src/: Main.cpp  Model.cpp  OVRDepthBuffer.cpp  OVRTextureBuffer.cpp  ObjLoader.cpp  OculusSystem.cpp  Scene.cpp  ShaderUtils.cpp  TextureLoader.cpp
VideoDecoding/: CMakeLists.txt  decoder.cpp  decoder.h  mpeg_codec.c
googletest/: CMakeLists.txt
googletest/cmake/: internal_utils.cmake
googletest/include/gtest/: gtest.h
googletest/include/gtest/internal/: gtest-port.h
googletest/test/: gtest-port_test.cc
libs/: CMakeLists.txt  stb_image.h  stb_image_write.h
libs/glfw-3.1/: CMakeLists.txt  README.md
libs/glfw-3.1/examples/: CMakeLists.txt
libs/glfw-3.1/include/GLFW/: glfw3.h
libs/glfw-3.1/src/: cocoa_monitor.m  cocoa_window.m  context.c  egl_context.c  glfw_config.h.in  glx_context.c  input.c  internal.h  linux_joystick.c  mir_init.c  mir_monitor.c  mir_window.c  monitor.c  nsgl_context.m  wgl_context.c  win32_init.c  win32_monitor.c  win32_window.c  window.c  x11_init.c  x11_monitor.c  x11_platform.h  x11_window.c
libs/glfw-3.1/tests/: CMakeLists.txt  cursor.c  events.c  joysticks.c  modes.c
